--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </nav>
 
-    <div class="simple-slider page-slider">
+    <div class="simple-slider page-slider" style="position: relative;text-align: center;">
         <div class="slider-wrapper">
             <div class="slider-slide">
                 <img src="assets/images/slideShow/1.jpg" class="sliderimg" alt="1" />
@@ -248,7 +248,6 @@
                         </p>
                     </div>
                 </div>
-
                 <div class="derecha col-xl-6 col-md-12">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1236981470406!2d-58.441577166516346!3d-34.60103344727378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbc146e0e5fd%3A0xbd2cb76b26109626!2sRemax%20Time!5e0!3m2!1ses-419!2sar!4v1601174158097!5m2!1ses-419!2sar"
                         width="100%" height="100%" frameborder="0" style="border: 0" allowfullscreen="yes" aria-hidden="false" tabindex="0"></iframe>
