--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <span>Por qué <img src="assets/images/REMAXTIME.png" class="Pqprop" alt="REMAXTIME" /> ?</span>
         </h1>
         <div class="row justify-content-center">
-            <div class="col-md-9">
+            <div class="col-sm-8 col-md-11 col-lg-11 col-xl-9">
                 <div class="container">
                     <div class="row justify-content-center" id="containerPropuesta"></div>
                 </div>
